# discterry

./: .dockerignore  .gitignore  Dockerfile  README.md  build_edges_edge.py  edges.edge  pipeline.md  pyproject.toml  requirements.txt
checkpoints/: best.pt  last.pt  train_meta.json
d-mercator-run/d2/: edges_GC.inf_coord  edges_GC.inf_log
d-mercator-run/d3/: edges_GC.inf_coord
d-mercator-run/d4/: edges_GC.inf_coord
legacysrc/: README.md  data.py  manifold_ops.py  train.py
notebooks/dmercator/: .gitignore  00_load_and_sanity.ipynb  01_exploratory_qa.ipynb  02_disk_views.ipynb  02b_disk_views_seeds.ipynb  02c_disk_focus_euclidean.ipynb  02d_disk_focus_mobius.ipynb  03_link_prediction_sanity.ipynb  04_export_disk_web_bundle.ipynb  README.md  dmercator_io.py  viz_bokeh.ipynb  viz_datashader.ipynb  viz_matplotlib_raster_vector.ipynb  viz_plotly_kaleido.ipynb
notebooks/dmercator3d/: .gitignore  00_load_and_sanity.ipynb  01_exploratory_qa.ipynb  02_sphere_S3_views.ipynb  02b_ball_views_seeds.ipynb  02c_ball_focus_euclidean.ipynb  02d_ball_focus_mobius.ipynb  03_link_prediction_sanity.ipynb  07_umap_features_hyp_rad.ipynb  08_umap_direction_only.ipynb  09_umap_colored_by_degree.ipynb  10_clustering_kmeans_hdbscan.ipynb  11_graph_vs_embedding_communities.ipynb  12_hub_geometry_correlations.ipynb  13_embedding_neighbor_overlap.ipynb  14_triplet_distance_sanity.ipynb  README.md  ball_projection.py  dmercator3d_io.py  native_hyperbolic.py  (+1 more)
scripts/: build_edges_edge.py  project_ball_umap.py
src/: __init__.py  config.py  export.py  export_arrow.py  model.py
(+68 files in other folders)
